Add translation + fix dialog